gac_sb/objects/Etablissement_secondaire__c.object
<CustomObject>
    <description>Objet contenant tous les établissements secondaires</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Etablissements Secondaires</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_NAF_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Utilisez le moteur de recherche pour retrouver un code à partir de son libellé</inlineHelpText>
        <label>Code NAF 2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(3 AND 1) OR (2 AND 4)</booleanFilter>
            <filterItems>
                <field>Code_NAF_2__c.Pays__c</field>
                <operation>equals</operation>
                <value>France</value>
            </filterItems>
            <filterItems>
                <field>Code_NAF_2__c.Pays__c</field>
                <operation>equals</operation>
                <value>Canada</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Etablissement secondaire record type</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CANADA Etablissement secondaire record type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Code_NAF_2__c</referenceTo>
        <relationshipLabel>Etablissements</relationshipLabel>
        <relationshipName>Etablissements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_postal__c</fullName>
        <label>Code postal</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_risque__c</fullName>
        <description>Le champ code risque est pré-rempli avec le code NAF1 connu pour cet établissement. Ce code risque est incomplet et a peut être changé. Si vous avez besoin de ce code, vous devez le vérifier et le compléter (3 chiffres suivis de 2 lettres).</description>
        <inlineHelpText>Le champ code risque est pré-rempli avec le code NAF1 connu pour cet établissement. Ce code risque est incomplet et a peut être changé. Si vous avez besoin de ce code, vous devez le vérifier et le compléter (3 chiffres suivis de 2 lettres).</inlineHelpText>
        <label>Code risque</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correspondance_SIREN__c</fullName>
        <formula>IF(LEFT(SIRET__c ,  9) == LEFT(Account__r.SIRET__c, 9 ) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correspondance SIREN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_partement_R_gion__c</fullName>
        <label>Département/Région</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectif_site__c</fullName>
        <label>Effectif site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forme_juridique__c</fullName>
        <label>Forme juridique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Centre technique</fullName>
                </value>
                <value>
                    <fullName>Collectivité territoriale</fullName>
                </value>
                <value>
                    <fullName>EURL (Entreprise unipersonnelle à responsabilité limitée)</fullName>
                </value>
                <value>
                    <fullName>GIE (Groupement d&apos;intérêt économique)</fullName>
                </value>
                <value>
                    <fullName>Société mutuelle</fullName>
                </value>
                <value>
                    <fullName>SARL</fullName>
                </value>
                <value>
                    <fullName>Société en action simple</fullName>
                </value>
                <value>
                    <fullName>Société civilie immobilière</fullName>
                </value>
                <value>
                    <fullName>Société étrangère</fullName>
                </value>
                <value>
                    <fullName>Société en nom collectif</fullName>
                </value>
                <value>
                    <fullName>S.C.</fullName>
                </value>
                <value>
                    <fullName>S.L.N.E.</fullName>
                </value>
                <value>
                    <fullName>S.A.U.</fullName>
                </value>
                <value>
                    <fullName>SOC.COM.</fullName>
                </value>
                <value>
                    <fullName>S.L.L.</fullName>
                </value>
                <value>
                    <fullName>S.A.L.</fullName>
                </value>
                <value>
                    <fullName>U.T.E.</fullName>
                </value>
                <value>
                    <fullName>Univ Pub</fullName>
                </value>
                <value>
                    <fullName>Univ Priv</fullName>
                </value>
                <value>
                    <fullName>OPI</fullName>
                </value>
                <value>
                    <fullName>OPrl</fullName>
                </value>
                <value>
                    <fullName>Fund Pub</fullName>
                </value>
                <value>
                    <fullName>Fund Priv</fullName>
                </value>
                <value>
                    <fullName>MEI</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Coopérative</fullName>
                </value>
                <value>
                    <fullName>Etablissement public</fullName>
                </value>
                <value>
                    <fullName>SA directoire</fullName>
                </value>
                <value>
                    <fullName>Soc. commandite/action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Libell_NAF__c</fullName>
        <formula>Code_NAF_2__r.Libelle_NAF_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Libellé NAF 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEQ_Num_ro_d_Entreprise_du_Qu_bec__c</fullName>
        <label>NEQ (Numéro d&apos;Entreprise du Québec)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_ro_d_Identification_Provincial__c</fullName>
        <label>Numéro d’Identification Provincial</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_d_Entreprise_Federal__c</fullName>
        <label>Numéro d’Entreprise Fédéral</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piste__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Piste</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Etablissements secondaires</relationshipLabel>
        <relationshipName>Etablissements_secondaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raison_sociale__c</fullName>
        <label>Raison sociale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rue__c</fullName>
        <label>Rue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SIREN__c</fullName>
        <externalId>true</externalId>
        <label>SIREN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIRET__c</fullName>
        <externalId>true</externalId>
        <label>SIRET</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Telecopie__c</fullName>
        <label>Télécopie</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Téléphone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1_old_Zone_VT__c</fullName>
        <label>V1_old_Zone VT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <label>Ville</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zones_concernees__c</fullName>
        <label>Zones concernées</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>ZRD</fullName>
                </value>
                <value>
                    <fullName>ZAFR</fullName>
                </value>
                <value>
                    <fullName>ZRR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Etablissement secondaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom de l&apos;établissement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissements secondaires</pluralLabel>
    <recordTypes>
        <fullName>CANADA_Etablissement_secondaire_record_type</fullName>
        <active>true</active>
        <label>CANADA Etablissement secondaire record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Etablissement_secondaire_record_type</fullName>
        <active>true</active>
        <label>Etablissement secondaire record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGP_Etablissement_secondaire_record_type</fullName>
        <active>true</active>
        <label>SGP Etablissement secondaire record type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ES_Coherence_des_SIREN</fullName>
        <active>true</active>
        <description>Un ES Doit avoir le même n˚ de SIREN qui son établissement principal</description>
        <errorConditionFormula>(  ISCHANGED(SIRET__c) || 
   ISNEW()) &amp;&amp; 
(  LEFT(SIRET__c ,9) != LEFT( Account__r.SIRET__c , 9)&amp;&amp;
   NOT( Account__r.RecordType.Name=&quot;CANADA ACCOUNT&quot; ||
        Account__r.RecordType.Name=&quot;SINGAPORE ACCOUNT&quot;))</errorConditionFormula>
        <errorDisplayField>SIRET__c</errorDisplayField>
        <errorMessage>Le numéro de SIREN de l&apos;établissement secondaire doit correspondre au numéro de SIREN de l&apos;établissement principal.</errorMessage>
    </validationRules>
</CustomObject>